<resources>


    <string name="app_name">Bóng Đá Phủi</string>
    <string name="please_enter_your_photo">Vui lòng chọn hình đại diện</string>
    <string name="please_enter_your_full_name">Vui lòng nhập họ và tên của bạn</string>
    <string name="full_name">Họ và tên:</string>
    <string name="todo">TODO</string>
    <string name="email">Email:</string>
    <string name="please_enter_your_email">Vui lòng nhập email của bạn</string>
    <string name="please_enter_your_email_first">Bạn chưa nhập email hoặc email không hợp lệ</string>
    <string name="email_not_valid">Email của bạn không phù hợp</string>
    <string name="phone">Số điện thoại:</string>
    <string name="please_enter_your_phone">Vui lòng nhập số điện thoại của bạn</string>
    <string name="please_enter_your_phone_valid">Số điện thoại không đúng</string>
    <string name="day_of_birth">Ngày sinh</string>
    <string name="please_input_dob">Vui lòng nhập ngày sinh của bạn</string>
    <string name="address">Địa chỉ:</string>
    <string name="please_input_address">Vui lòng nhập địa chỉ của bạn</string>
    <string name="height">Chiều cao</string>
    <string name="please_input_height">Vui lòng nhập chiều cao của bạn (cm)</string>
    <string name="weight">Cân nặng:</string>
    <string name="please_input_weight">Vui lòng nhập cân nặng của bạn (kg)</string>
    <string name="position">Vị trị sở trường:</string>
    <string name="please_input_position">Vui lòng nhập vị trí sở trường của bạn</string>
    <string name="clothers_number">Số áo đang mặc</string>
    <string name="please_input_clothers_number">Vui lòng nhập số áo bạn đang mặc</string>
    <string name="input">Thêm</string>
    <string name="text">text</string>
    <string name="list_member">Danh Sách Đội Bóng</string>
    <string name="list_fc">Đội bóng</string>
    <string name="list_club">Danh sách đội bóng</string>
    <string name="join_club">Lời nhắn cho đội trưởng:</string>
    <string name="update_info">Cập nhật thông tin</string>
    <string name="update">Cập nhật</string>
    <string name="add_fc">Thêm đội bóng</string>
    <string name="update_fc">Cập nhật %s</string>
    <string name="members">Thành viên</string>
    <string name="find_field">Tìm sân</string>
    <string name="user">Tài khoản</string>
    <string name="list_football_field">Danh sách sân bóng đá</string>
    <string name="name_football_field">Tên sân cỏ nhân tạo</string>
    <string name="please_input_name_football_field">Vui lòng nhập tên sân</string>
    <string name="please_input_count_field">Vui lòng nhập số lượng sân 5 người</string>
    <string name="please_enter_phone_field">Vui lòng nhập số điện thoại sân</string>
    <string name="please_enter_address_field">Vui lòng nhập địa chỉ sân</string>
    <string name="please_enter_address_fc">Vui lòng nhập địa chỉ đội bóng</string>
    <string name="price_field">Giá sân trung bình</string>
    <string name="please_enter_price_one_hour">Vui lòng nhập giá sân đá 1 tiếng</string>
    <string name="count_field">Số lượng sân</string>
    <string name="add_football_field">Thêm sân bóng</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="use_app_to_login">Bạn cần đăng nhập để vào ứng dụng</string>
    <string name="info_user">Thông tin</string>
    <string name="manager">Quản lý</string>
    <string name="login">Đăng nhập</string>
    <string name="please_enter_your_name">Vui lòng nhập họ và tên của bạn</string>
    <string name="please_enter_your_password">Vui lòng nhập mật khẩu của bạn</string>
    <string name="please_re_enter_your_password">Vui lòng xác nhận mật khẩu của bạn</string>
    <string name="invalid_password">Mật khẩu phải ít nhất 6 ký tự</string>
    <string name="password_not_match">Xác nhận nhận khẩu không đúng</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="not_yet_update">Chưa cập nhật</string>
    <string name="not_update">Chưa cập nhật</string>
    <string name="alert">Thông báo</string>
    <string name="no">Không</string>
    <string name="cancel">Huỷ</string>
    <string name="agree">Đồng ý</string>
    <string name="call">Gọi điện</string>
    <string name="yes">Có</string>
    <string name="close">Đóng</string>
    <string name="are_you_want_logout">Bạn có muốn đăng xuất không?</string>
    <string name="alert_denied_permission">
        Bạn đã từ chối quyền truy cập thư viện hình ảnh, vui lòng vào phần cài đặt của ứng dụng để cho phép truy cập
        hình ảnh
    </string>
    <string name="request_join_club_fail">Yêu cầu của bạn không thành công. Vui lòng thực hiện lại.</string>
    <string name="request_join_club_success">Yêu cầu của bạn đã được gửi. Bạn hãy đợi đội trưởng duyệt.</string>
    <string name="new_user">Thành viên mới?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="password">Mật khẩu</string>
    <string name="skip">Để sau</string>
    <string name="not_yet_data">Chưa có dữ liệu</string>
    <string name="google_web_client_id">303996690941-vq3ot26cmv2po4s9n7di8cmco9nj784b.apps.googleusercontent.com
    </string>
    <string name="this_feature_need_login">Vui lòng đăng nhập để sử dụng tính năng này</string>
    <string name="this_feature_need_update_phone">Vui lòng cập nhật số điện thoại để sử dụng tính năng này</string>
    <string name="player_request">Cầu thủ xin gia nhập đội</string>
    <string name="accept_player_message">Cho phép cầu thủ gia nhập</string>
    <string name="reject_player_message">Từ chối cầu thủ gia nhập</string>xin
    <string name="need_login_to_see">Đăng nhập để xem</string>
    <string name="add_field_fail">Thêm sân thất bại, vui lòng thực hiện lại</string>
    <string name="add_field_success">Chúng tôi đã nhận được thông tin sân của bạn.\nChúng tôi sẽ kiểm tra và thêm vào cơ sở dữ liệu sớm nhất.
    \nMọi thông tin chỉnh sửa hoặc thêm mới xin gửi về địa chỉ email: bongdaphui.247@gmail.com\nXin chân thành cảm ơn.</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="update_fail">Có lỗi khi cập nhật. Vui lòng thực hiện lại.</string>
    <string name="add_field_is_available">Sân bóng này đã có trên hệ thống.\nNếu bạn muốn thay đổi thông tin sân hãy
        gửi thông tin về địa chỉ email bongdaphui.247@gmail.com \nChúng tôi sẽ cập nhật thông tin cho bạn. Xin cảm ơn.
    </string>
    <string name="album">Hình ảnh</string>
    <string name="missing_position">Vị trí ưu tiên</string>
    <string name="info_team">Thông tin đội</string>
    <string name="player">Cầu thủ</string>
    <string name="three_dot">...</string>
    <string name="schedule_of_you">Lịch tìm trận đấu của bạn</string>
    <string name="schedule_of_club">Lịch tìm trận đấu của đội</string>
    <string name="add_schedule_of_you">Thêm khung giờ muốn đá</string>
    <string name="valid_input_date_schedule">Thời gian kết thúc phải sau thời gian bắt đầu</string>
    <string name="add_schedule_player_success">Thêm lịch thi đấu thành công</string>
    <string name="add_schedule_player_fail">Thêm lịch thi đấu thất bại. Bạn vui lòng thực hiện lại</string>
    <string name="add_schedule_club">Thêm lịch thi đấu >>></string>
    <string name="alert_reset_pass">Một mật khẩu mới sẽ được gửi đến địa chỉ email: %s.\n\n Bạn có đồng ý không?
    </string>
    <string name="please_check_email">Email đã được gửi đến: %s \n\n Bạn vui lòng kiểm tra email để nhận mật khẩu mới
    </string>
    <string name="send_mail_fail">Gửi mail thất bại. Vui lòng thực hiện lại</string>
    <string name="please_choose_type_field">Vui lòng chọn loại sân bạn muốn đá</string>
    <string name="you_need_update_phone">Bạn cần cập nhật số điện thoại để sử dụng chức năng này</string>
    <string name="accept">Chấp nhận</string>
    <string name="reject">Từ chối</string>
    <string name="list_player_request_join">Cầu thủ xin gia nhập đội</string>
    <string name="please_choose_district">Vui lòng chọn Quận / Huyện</string>
    <string name="next">Tiếp theo</string>
    <string name="you_no_club">Bạn vẫn chưa quản lý câu lạc bộ nào</string>
    <string name="write_review">Viết đánh giá</string>
    <string name="submit_review">Gửi đánh giá</string>

    <!--TIME AGO-->
    <!--<string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">just now</string>
    <string name="time_ago_minute">a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">an hour</string>
    <string name="time_ago_hours">%d hours</string>
    <string name="time_ago_day">yesterday</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">a year</string>
    <string name="time_ago_years">%d years</string>-->
    <!--TIME AGO-->
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">trước</string>
    <string name="time_ago_seconds">Vừa xong</string>
    <string name="time_ago_minute">1 phút</string>
    <string name="time_ago_minutes">%d phút</string>
    <string name="time_ago_hour">1 giờ</string>
    <string name="time_ago_hours">%d giờ</string>
    <string name="time_ago_day">Hôm qua</string>
    <string name="time_ago_days">%d ngày</string>
    <string name="time_ago_month">1 tháng</string>
    <string name="time_ago_months">%d tháng</string>
    <string name="time_ago_year">1 năm</string>
    <string name="time_ago_years">%d năm</string>
    <string name="count_review">(%s)</string>
    <string name="not_yet_review">(Hiện chưa có đánh giá)</string>

</resources>
