<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:id="@+id/frg_join_club_scroll"
        android:fillViewport="true"
        android:focusable="true">

    <LinearLayout
            android:id="@+id/frg_join_club_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:paddingStart="@dimen/fs_20"
            android:paddingLeft="@dimen/fs_20"
            android:paddingEnd="@dimen/fs_20"
            android:paddingRight="@dimen/fs_20"
            android:focusable="true">

        <TextView
                android:layout_marginTop="@dimen/fs_20"
                style="@style/title_item_input"
                android:text="Hình đại diện"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_photo"
                android:layout_width="@dimen/fs_150"
                android:layout_marginBottom="@dimen/fs_5"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_transparent_solid_gray_border_0_radius"
                android:layout_height="@dimen/fs_150">
            <ImageView
                    android:id="@+id/frg_join_club_iv_photo"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_margin="@dimen/fs_1"
                    android:src="@drawable/ic_picture"
                    android:layout_height="match_parent"/>
            <ImageView
                    android:id="@+id/frg_join_club_iv_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera"
                    android:layout_marginBottom="-1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_select_photo"
                style="@style/tv_error_item_input"
                android:layout_gravity="center_horizontal"
                android:text="@string/please_enter_your_photo"/>
        <TextView
                style="@style/title_item_input"
                android:text="@string/full_name"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_full_name"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_username"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_user_name"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_full_name"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_full_name"
                    android:layout_toEndOf="@+id/frg_join_club_iv_username"
                    android:hint="@string/please_enter_your_full_name"
                    android:inputType="textCapWords"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_full_name"
                    android:layout_toRightOf="@+id/frg_join_club_iv_username"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_full_name"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_full_name"
                style="@style/tv_error_item_input"
                android:text="@string/please_enter_your_full_name"/>

        <TextView
                style="@style/title_item_input"
                android:text="@string/email"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_email"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_email"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_email"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_email"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_email"
                    android:layout_toEndOf="@+id/frg_join_club_iv_email"
                    android:hint="@string/please_enter_your_email"
                    android:inputType="textEmailAddress"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_email"
                    android:layout_toRightOf="@+id/frg_join_club_iv_email"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_email"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_email"
                style="@style/tv_error_item_input"
                android:text="@string/please_enter_your_email"/>

        <TextView
                style="@style/title_item_input"
                android:text="@string/phone"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_phone"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_phone"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_phone"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_phone"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_phone"
                    android:layout_toEndOf="@+id/frg_join_club_iv_phone"
                    android:hint="@string/please_enter_your_phone"
                    android:inputType="phone"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_phone"
                    android:layout_toRightOf="@+id/frg_join_club_iv_phone"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_phone"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_phone"
                style="@style/tv_error_item_input"
                android:text="@string/please_enter_your_phone"/>

        <TextView
                style="@style/title_item_input"
                android:text="@string/day_of_birth"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_dob"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_dob"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_dob"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/frg_join_club_et_dob"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_dob"
                    android:layout_toEndOf="@+id/frg_join_club_iv_dob"
                    android:hint="@string/please_input_dob"
                    android:gravity="center_vertical"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_dob"
                    android:layout_toRightOf="@+id/frg_join_club_iv_dob"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_dob"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_dob"
                style="@style/tv_error_item_input"
                android:text="@string/please_input_dob"/>

        <TextView
                style="@style/title_item_input"
                android:text="@string/address"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_address"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_address"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_address"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_address"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_address"
                    android:layout_toEndOf="@+id/frg_join_club_iv_address"
                    android:hint="@string/please_input_address"
                    android:maxLines="1"
                    android:inputType="textCapWords"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_address"
                    android:layout_toRightOf="@+id/frg_join_club_iv_address"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_address"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_address"
                style="@style/tv_error_item_input"
                android:text="@string/please_input_address"/>

        <TextView
                style="@style/title_item_input"
                android:text="Chiều cao (cm)"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_height"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_height"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_height"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_height"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_height"
                    android:layout_toEndOf="@+id/frg_join_club_iv_height"
                    android:hint="@string/please_input_height"
                    android:inputType="numberDecimal"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_height"
                    android:layout_toRightOf="@+id/frg_join_club_iv_height"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_height"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_height"
                style="@style/tv_error_item_input"
                android:text="@string/please_input_height"/>

        <TextView
                style="@style/title_item_input"
                android:text="Cân nặng (kg)"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_weight"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_weight"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_weight"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_weight"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_weight"
                    android:layout_toEndOf="@+id/frg_join_club_iv_weight"
                    android:hint="@string/please_input_weight"
                    android:inputType="numberDecimal"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_weight"
                    android:layout_toRightOf="@+id/frg_join_club_iv_weight"
                    tools:ignore="Autofill"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_weight"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_weight"
                style="@style/tv_error_item_input"
                android:text="@string/please_input_weight"/>

        <TextView
                style="@style/title_item_input"
                android:text="@string/position"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_position"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_position"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_position"
                    tools:ignore="ContentDescription"/>

            <Spinner
                    android:id="@+id/frg_join_club_sp_position"
                    android:layout_width="match_parent"
                    android:layout_toEndOf="@+id/frg_join_club_iv_position"
                    android:layout_height="match_parent"
                    android:overlapAnchor="false"
                    tools:ignore="HardcodedText,UnusedAttribute"
                    android:layout_toRightOf="@+id/frg_join_club_iv_position"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_position"
                style="@style/tv_error_item_input"
                android:text="@string/please_input_position"/>

        <TextView
                style="@style/title_item_input"
                android:text="@string/clothers_number"/>

        <RelativeLayout
                android:id="@+id/frg_join_club_v_input_clothers_number"
                style="@style/bg_item_input">

            <ImageView
                    android:id="@+id/frg_join_club_iv_clothers_number"
                    style="@style/iv_icon_item_input"
                    android:src="@drawable/ic_shirts"
                    tools:ignore="ContentDescription"/>

            <EditText
                    android:id="@+id/frg_join_club_et_clothers_number"
                    style="@style/et_item_input"
                    android:layout_toStartOf="@+id/frg_join_club_iv_clear_input_clothers_number"
                    android:layout_toEndOf="@+id/frg_join_club_iv_clothers_number"
                    android:hint="@string/please_input_clothers_number"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:layout_toLeftOf="@+id/frg_join_club_iv_clear_input_clothers_number"
                    android:layout_toRightOf="@+id/frg_join_club_iv_clothers_number"
                    tools:ignore="Autofill,RtlHardcoded"/>

            <ImageView
                    android:id="@+id/frg_join_club_iv_clear_input_clothers_number"
                    style="@style/iv_clear_item_input"
                    tools:ignore="ContentDescription"/>

        </RelativeLayout>

        <TextView
                android:id="@+id/frg_join_club_tv_error_input_clothers_number"
                style="@style/tv_error_item_input"
                android:text="@string/please_input_clothers_number"/>

        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frg_join_club_progress"
                android:visibility="invisible"
                android:max="100"/>

        <TextView
                android:id="@+id/frg_join_club_tv_input"
                style="@style/bt_single_c_accent"
                android:layout_gravity="center_horizontal"
                android:text="@string/join_club"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
