<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/fs_20"
            android:layout_marginEnd="@dimen/fs_20"
            android:background="@drawable/bg_white_solid_gray_border_5_radius"
            android:orientation="vertical">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fs_46"
                android:layout_marginBottom="@dimen/fs_46"
                style="@style/tv_ts_16_c_accent_dark_bold"
                android:gravity="center_horizontal"
                android:text="@string/alert"
                android:textAllCaps="true"/>

        <TextView
                style="@style/tv_ts_14_c_2d2d2d_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fs_20"
                android:layout_marginEnd="@dimen/fs_20"
                android:layout_marginBottom="@dimen/fs_60"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="@dimen/fs_5"
                android:text="Bạn muốn đăng xuất"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/fs_15"
                android:paddingEnd="@dimen/fs_15"
                android:paddingBottom="@dimen/fs_15"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/dialog_yes_no_tv_no"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="@string/no"
                    android:textColor="@android:color/white"/>


            <Button
                    android:id="@+id/dialog_yes_no_tv_yes"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="@string/yes"
                    android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
